añadir favicon a cada página

--- a/HTML/galeria.html
+++ b/HTML/galeria.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="../CSS/galeria.css" type="text/css">
     <script src="https://kit.fontawesome.com/b12adba2f5.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/vnd.icon" href="../Resources/logo2.ico">
 
 </head>
 
