--- a/HTML/HTML_actividades/equipos.html
+++ b/HTML/HTML_actividades/equipos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../CSS/equipos.css" type="text/css">
+    <link rel="icon" type="image/vnd.icon" href="../../Resources/logo2.ico">
 </head>
 
 <body>
