--- a/HTML/HTML_actividades/noticias.html
+++ b/HTML/HTML_actividades/noticias.html
@@ -9,6 +9,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
     <link rel="stylesheet" href="../../CSS/noticias.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link rel="icon" type="image/vnd.icon" href="../../Resources/logo2.ico">
 </head>
 
 <body>
