--- a/HTML/actividades.html
+++ b/HTML/actividades.html
@@ -7,6 +7,7 @@
     <title>LEC/Actividades</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="../CSS/actividadess.css" type="text/css">
+    <link rel="icon" type="image/vnd.icon" href="../Resources/logo2.ico">
 </head>
 
 <body>
