--- a/HTML/tienda.html
+++ b/HTML/tienda.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../CSS/tienda.css" type="text/css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    <link rel="icon" type="image/vnd.icon" href="../Resources/logo2.ico">
 </head>
 
 <body>
