--- a/HTML/HTML_actividades/clasificacion.html
+++ b/HTML/HTML_actividades/clasificacion.html
@@ -54,7 +54,7 @@
     </header>
 
     <div class="contenido">
-        
+        <script src="../../JS/clasificacionAPI.js"></script>
         <table>
             <tbody>
                 <tr>
